# exam-timetabling-ga

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PRD.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: app.py  style.css
data/: courses.csv  enrollment.csv  rooms.csv  slot_blocks.csv  students.csv  timeslots.csv
development/: GIT_WORKFLOW.md  TEAM_TASKS.md  UV_SETUP.md
development/standards/: CODING_STANDARD.md  DATA_SPEC.md  TYPE_GUIDELINES.md
outputs/: fitness_history.csv  schedule.csv  sensitivity_analysis.csv  statistical_significance.json  statistics.json  time_complexity_profile.json
report/: refs.bib  report.typ
scripts/: academic_experiment.py  generate_dataset.py
src/config/: app_config.py  dataset_config.py  ga_config.py
src/evaluation/: benchmark.py  greedy.py  metrics.py
src/fitness/: additional_constraints.py  fitness.py  hard_constraints.py  soft_constraints.py
src/ga/: chromosome.py  crossover.py  elitism.py  engine.py  mutation.py  population.py  selection.py
src/models/: __init__.py  course.py  enrollment.py  student.py  timeslot.py
src/preprocessing/: conflict_matrix.py  load_dataset.py  validator.py
src/utils/: constants.py  helpers.py
src/visualization/: conflict_heatmap.py  fitness_chart.py  schedule_table.py  statistics.py
tests/: test_fitness.py  test_mutation.py  test_preprocessing.py  test_selection.py
