[project]
name = "exam-timetabling-ga"
version = "0.1.0"
description = "Optimasi Penjadwalan Ujian Universitas Menggunakan Genetic Algorithm"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Kelompok 17 PKK" }
]

keywords = [
    "genetic-algorithm",
    "exam-timetabling",
    "optimization",
    "evolutionary-computation",
    "streamlit"
]

dependencies = [
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "streamlit>=1.46.0",
    "streamlit-option-menu>=0.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

pythonpath = [
    ".",
]

addopts = "-q"
